lab1/Test/L1-A-10-41.output
Error Type A at Line 13
Error Type B at Line 17
Error Type B at Line 20
Error Type B at Line 24
Error Type A at Line 32
Error Type A at Line 42
Error Type A at Line 43
Error Type B at Line 44
Error Type A at Line 51
Error Type B at Line 54
