lab1/Test/L1-A-10-41.cmm
float UHLW ( ) {
  int e0hHb4QE7k1Fz ;
  if ( yFVclv )   while ( iVTOcAH2DH )   return cf4UxQAeiit 
    ;

else {
    struct uqtaQj65bV Wy9hhbOWRIvZTSt = YUhTUnKDTFbXbz7RNY4 
      && mcDBHwCbsDGrqX != i9cIihG8_4F22KcW5j - kGF8_rRtPQlBFMm 
      * - IPpZi [ QGoUL1wLm2NqpDZmCo = PiPqPDZ_W || T9KSE 
      + jc7uN ( t8MJyUrl > vA / - ( aBVX9qo_uDZG7lp = zspgvwV5Co3QfGPRBEme 
      >= ( nOknZc2lR <= _vMxYpDJ ( xhX1cVjMpJuT0npxG , CpXRKf1LrX1K0KFj 
      ) . AWwpq6rufp5VjrzIE ) < 1325791264 * 1149952465.30933110 
      . c1jLCEzM6 ) \. GeIxlXVpBS4 ) ] / - ! cllltKucXNm7bbhW4ejr 
      == UQiB ( ) , GXKxdfJySxH6HN0jE5 [ 1342227991 ] ;
  }
}
int int jic , jAfk5cdoIKtr0zv4urkf 

;
int T ( != ) {
}
int vJU0Jho9i ( int hcJzcdGezGb ) {
  if ( _a74XKGob9zayyAc )   VFov4104 ;
> else   if ( ld7UY8dcSDqQsmBWll7s )   jTiiy ;


}
struct {
  int qdT5xSPOFJYubDL ;
  int ZJfwyBcdP0e4syINlI_ ;
  struct GZLS_ {
  }'S9TL8Q1Rr1njSCsQ53jO ;
  int YThu7SiEE0Bz ;
};
int CiIrs7wDJSmj ( ) {
}
int ;
int dmFQofx1J_4EXQFPUF ( ) {
}
int ;
int rOP9Acq5iebh3 ( ) {
$}
int ;$
1222108997.1426919507 int NNC0D ( ) {
}
int ;
int zJcMINRXN7Q9C ( ) {
}
int GjK ( ) {
}
int ZwnqbgZUY7i9 ( `int e6SVPKX0eGA6j0v , int UJ2V2 
  ) {
}
54606631.1023631414 